tabindex en testing pagina

--- a/testing/testing.html
+++ b/testing/testing.html
@@ -24,18 +24,18 @@
             <ul>
 
                 <li class="home">
-                    <a href="../index.html" class="huis" aria-label="home"><svg class="svg-home" fill="#434b75"
+                    <a href="../index.html" class="huis" aria-label="home" tabindex="8"><svg class="svg-home" fill="#434b75"
                             width="40px" height="40px" viewBox="0 -32 576 576" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z" />
                         </svg></a>
                     <a href="../index.html">
-                        <p class="kopje">Home</p>
+                        <p class="kopje" tabindex="9">Home</p>
                     </a>
                 </li>
 
                 <li class="testing">
-                    <a href="./testing.html" class="testen" aria-label="testing"><svg class="svg-testing" height="40px"
+                    <a href="./testing.html" class="testen" aria-label="testing" tabindex="10"><svg class="svg-testing" height="40px"
                             width="40px" version="1.1" id="_x32_" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512 512" xml:space="preserve">
                             <style type="text/css">
@@ -60,24 +60,24 @@
                             </g>
                         </svg></a>
                     <a href="./testing.html">
-                        <p class="kopje">Testing</p>
+                        <p class="kopje" tabindex="11">Testing</p>
                     </a>
                 </li>
 
                 <li class="lessons-nav">
-                    <a href="" class="les" aria-label="lessons-menu"><svg class="svg-lessons" fill="#434b75"
+                    <a href="" class="les" aria-label="lessons-menu" tabindex="12"><svg class="svg-lessons" fill="#434b75"
                             width="40px" height="40px" viewBox="0 0 14 14" role="img" focusable="false"
                             aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M 6.55466,11.542 C 6.10897,11.0187 5.36501,10.459 4.6445,10.1049 3.91698,9.7473 3.22595,9.5487 2.44138,9.4719 2.28669,9.4569 2.15844,9.4429 2.15639,9.4409 c -0.002,0 0.002,-1.6151 0.01,-3.5846 l 0.0132,-3.5808 0.14284,0.014 c 0.87708,0.087 1.85601,0.4184 2.59669,0.8803 0.63833,0.398 1.29749,1.0126 1.71774,1.6015 l 0.10576,0.1482 0,3.4014 c 0,1.8707 -0.008,3.401 -0.0176,3.4007 -0.01,-3e-4 -0.0861,-0.081 -0.16992,-0.1794 z m 0.72656,-3.2297 0,-3.4156 0.20424,-0.2729 C 7.74623,4.2754 8.27075,3.7505 8.61758,3.491 9.54472,2.7971 10.55044,2.405 11.70505,2.287 l 0.14648,-0.015 0,3.5858 0,3.5859 -0.16992,0.016 C 10.0739,9.6093 8.6801,10.2726 7.5899,11.4068 l -0.30868,0.3212 0,-3.4156 z m 0.9961,3.1835 c 0.63101,-0.592 1.46635,-1.0624 2.30546,-1.2985 0.4391,-0.1235 1.01012,-0.2097 1.38918,-0.2097 0.19874,0 0.30898,-0.043 0.37116,-0.1451 0.0468,-0.077 0.0473,-0.1101 0.0474,-3.0157 l 8e-5,-2.9382 0.0879,0.016 c 0.0483,0.01 0.18544,0.048 0.30468,0.086 l 0.2168,0.069 0,3.6669 c 0,2.0168 -0.008,3.6669 -0.0179,3.6669 -0.01,0 -0.15489,-0.031 -0.32227,-0.069 -0.66143,-0.149 -1.20614,-0.2002 -1.92152,-0.1809 -0.86772,0.024 -1.54209,0.145 -2.34375,0.422 l -0.30469,0.1053 0.1875,-0.1759 z m -2.67188,0.057 C 5.27252,11.4336 4.7227,11.2931 4.35153,11.2325 c -0.50468,-0.082 -0.85286,-0.1038 -1.4714,-0.09 -0.61458,0.013 -0.98632,0.056 -1.49344,0.1711 -0.1418,0.032 -0.28682,0.065 -0.32227,0.072 l -0.0644,0.014 1.1e-4,-3.6767 1.2e-4,-3.6768 0.27529,-0.08 c 0.1514,-0.044 0.28847,-0.085 0.30458,-0.09 0.0233,-0.01 0.0293,0.589 0.0293,2.9349 0,3.2057 -0.007,3.027 0.12978,3.1169 0.0476,0.031 0.1465,0.045 0.42893,0.062 1.12246,0.064 2.18752,0.4409 3.05702,1.0822 0.1875,0.1383 0.63749,0.5181 0.66328,0.5598 0.018,0.029 0.006,0.026 -0.28292,-0.078 z" />
                         </svg></a>
                     <a href="">
-                        <p class="kopje">Lessons</p>
+                        <p class="kopje" tabindex="13">Lessons</p>
                     </a>
                 </li>
 
                 <li class="statistics">
-                    <a href="" class="doelen" aria-label="statistics-menu"><svg class="svg-statistics" fill="#434b75"
+                    <a href="" class="doelen" aria-label="statistics-menu" tabindex="14"><svg class="svg-statistics" fill="#434b75"
                             version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" width="35px" height="35px" viewBox="0 0 124 124"
                             xml:space="preserve">
@@ -93,12 +93,12 @@
                             </g>
                         </svg></a>
                     <a href="">
-                        <p class="kopje">Statistics</p>
+                        <p class="kopje" tabindex="15">Statistics</p>
                     </a>
                 </li>
 
                 <li class="profile">
-                    <a href="" class="gebruiker" aria-label="profile-menu"><svg class="svg-profile" width="40px"
+                    <a href="" class="gebruiker" aria-label="profile-menu" tabindex="16"><svg class="svg-profile" width="40px"
                             height="40px" viewBox="0 0 24 24" fill="#434b75" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M12 11.796C14.7189 11.796 16.9231 9.60308 16.9231 6.89801C16.9231 4.19294 14.7189 2.00005 12 2.00005C9.28106 2.00005 7.07692 4.19294 7.07692 6.89801C7.07692 9.60308 9.28106 11.796 12 11.796Z"
@@ -108,7 +108,7 @@
                                 fill="##434b75" />
                         </svg></a>
                     <a href="">
-                        <p class="kopje">Profile</p>
+                        <p class="kopje" tabindex="17">Profile</p>
                     </a>
                 </li>
             </ul>
@@ -128,13 +128,13 @@
         <p class="tekst-uitleg">While using the TuMi Mundo method, you can do a couple of different tests to measure
             your child’s progress.
             You
-            will be able to review all your results on the <a class="tekst-link" href="">statistics</a> page.</p>
+            will be able to review all your results on the <a class="tekst-link" href="" tabindex="1">statistics</a> page.</p>
 
     </article>
 
-    <article class="Privacy-statement">
+    <article class="privacy-statement">
 
-        <details>
+        <details tabindex="2">
             <summary>Privacy statement</summary>
             <p class="privacy">The results of these tests <b>will</b> be shared with the researchers and universities.
                 You can change your
@@ -156,7 +156,7 @@
                     xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M12 7V12L13.5 14.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
-                        stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                        stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
                 <p class="tijd">10-15 minutes</p>
             </section>
@@ -170,7 +170,7 @@
                     test. This will be explained to you through a few pictures. </p>
             </div>
 
-            <button class="button-start-test">Start test
+            <button class="button-start-test" tabindex="3">Start test
                 <svg class="play" width="20px" height="20px" viewBox="0 0 24 24" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -193,7 +193,7 @@
                     xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M12 7V12L13.5 14.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
-                        stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                        stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
                 <p class="tijd">5-10 minutes</p>
             </section>
@@ -212,7 +212,7 @@
             <div class="button-img-article">
                 <img src="../svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
-                <button class="button-start-test">Start test
+                <button class="button-start-test" tabindex="4">Start test
                     <svg class="play" width="20px" height="20px" viewBox="0 0 24 24" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -238,7 +238,7 @@
                     xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M12 7V12L13.5 14.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
-                        stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                        stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
                 <p class="tijd">10-15 minutes</p>
             </section>
@@ -258,7 +258,7 @@
             <div class="button-img-article">
                 <img src="../svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
-                <button class="button-start-test">Start test
+                <button class="button-start-test" tabindex="5">Start test
                     <svg class="play" width="20px" height="20px" viewBox="0 0 24 24" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -282,7 +282,7 @@
                     xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M12 7V12L13.5 14.5M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
-                        stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                        stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
                 <p class="tijd">10-15 minutes</p>
             </section>
@@ -303,7 +303,7 @@
             <div class="button-img-article">
                 <img src="../svg/UniversiteitLeidenLogo.svg.png" alt="logo Universiteit Leiden">
 
-                <button class="button-start-test">Start test
+                <button class="button-start-test" tabindex="6">Start test
                     <svg class="play" width="20px" height="20px" viewBox="0 0 24 24" fill="none"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -315,7 +315,7 @@
         </article>
 
 
-        <button class="button-menu" aria-label="menu openen" id="menuToggle" tabindex="2">
+        <button class="button-menu" aria-label="menu openen" id="menuToggle" tabindex="7">
             <svg id="menuIcon" fill="#fffffff" width="45px" height="45px" viewBox="0 0 56 56"
                 xmlns="http://www.w3.org/2000/svg">
                 <path
