--- a/testing/testing.html
+++ b/testing/testing.html
@@ -161,7 +161,7 @@
                 <p class="tijd">10-15 minutes</p>
             </section>
 
-            <div class="tekst-uitleg">
+            <div class="test-uitleg">
                 <p class="how">How it works:</p>
 
                 <p>The reason to do this test is to measure how long the attention span is for the learned language(s).
@@ -198,7 +198,7 @@
                 <p class="tijd">5-10 minutes</p>
             </section>
 
-            <div class="tekst-uitleg">
+            <div class="test-uitleg">
                 <p class="how">How it works:</p>
 
                 <p>This test is provided through the University of Leiden. The results of these tests will be shared
@@ -243,7 +243,7 @@
                 <p class="tijd">10-15 minutes</p>
             </section>
 
-            <div class="tekst-uitleg">
+            <div class="test-uitleg">
 
                 <p class="how">How it works</p>
 
@@ -287,7 +287,7 @@
                 <p class="tijd">10-15 minutes</p>
             </section>
 
-            <div class="tekst-uitleg">
+            <div class="test-uitleg">
 
                 <p class="how">How it works:</p>
 
