--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <main>
 
-        <article>
+        <div class="vraag-uitleg-werkt">
             <section>
                 <h2>
                     Explanation
@@ -131,10 +131,10 @@
                     proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam
                     en ze door elkaar husselde om een font-catalogus te maken.</p>
             </section>
-        </article>
+        </div>
 
         <button type="button" class="vraagteken" id="vraagToggle" tabindex="1">
-            <svg class="hulp-icon" aria-label="vraagteken" height="35px" width="35px" version="1.1" id="Capa_1"
+            <svg class="hulp-icon" aria-label="vraagteken" height="35px" width="35px" version="1.1"
                 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                 viewBox="0 0 302.967 302.967" xml:space="preserve">
                 <g>
@@ -341,14 +341,13 @@
                         </filter>
                         <linearGradient id="paint0_linear_1_306" x1="148.919" y1="141.837" x2="149.501" y2="253.132"
                             gradientUnits="userSpaceOnUse">
-                            <stop stop-color="#E3C795" />
+                            <stop offset="1" stop-color="#E3C795" />
                             <stop offset="1" stop-color="#C2A674" />
                         </linearGradient>
                     </defs>
                 </svg>
             </figure>
 
-            </section>
         </div>
 
         <button aria-label="menu openen" id="menuToggle" tabindex="3">
