--- a/testing/testing.html
+++ b/testing/testing.html
@@ -29,8 +29,8 @@
                             <path
                                 d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z" />
                         </svg></a>
-                    <a href="../index.html">
-                        <p class="kopje" tabindex="9">Home</p>
+                    <a href="../index.html" tabindex="9">
+                        <p class="kopje">Home</p>
                     </a>
                 </li>
 
@@ -59,8 +59,8 @@
                        c9.487-7.814,20.744,13.648,47.26,13.648C486.561,312.8,512,287.36,512,256C512,224.639,486.561,199.201,455.209,199.201z" />
                             </g>
                         </svg></a>
-                    <a href="./testing.html">
-                        <p class="kopje" tabindex="11">Testing</p>
+                    <a href="./testing.html" tabindex="11">
+                        <p class="kopje">Testing</p>
                     </a>
                 </li>
 
@@ -71,8 +71,8 @@
                             <path
                                 d="M 6.55466,11.542 C 6.10897,11.0187 5.36501,10.459 4.6445,10.1049 3.91698,9.7473 3.22595,9.5487 2.44138,9.4719 2.28669,9.4569 2.15844,9.4429 2.15639,9.4409 c -0.002,0 0.002,-1.6151 0.01,-3.5846 l 0.0132,-3.5808 0.14284,0.014 c 0.87708,0.087 1.85601,0.4184 2.59669,0.8803 0.63833,0.398 1.29749,1.0126 1.71774,1.6015 l 0.10576,0.1482 0,3.4014 c 0,1.8707 -0.008,3.401 -0.0176,3.4007 -0.01,-3e-4 -0.0861,-0.081 -0.16992,-0.1794 z m 0.72656,-3.2297 0,-3.4156 0.20424,-0.2729 C 7.74623,4.2754 8.27075,3.7505 8.61758,3.491 9.54472,2.7971 10.55044,2.405 11.70505,2.287 l 0.14648,-0.015 0,3.5858 0,3.5859 -0.16992,0.016 C 10.0739,9.6093 8.6801,10.2726 7.5899,11.4068 l -0.30868,0.3212 0,-3.4156 z m 0.9961,3.1835 c 0.63101,-0.592 1.46635,-1.0624 2.30546,-1.2985 0.4391,-0.1235 1.01012,-0.2097 1.38918,-0.2097 0.19874,0 0.30898,-0.043 0.37116,-0.1451 0.0468,-0.077 0.0473,-0.1101 0.0474,-3.0157 l 8e-5,-2.9382 0.0879,0.016 c 0.0483,0.01 0.18544,0.048 0.30468,0.086 l 0.2168,0.069 0,3.6669 c 0,2.0168 -0.008,3.6669 -0.0179,3.6669 -0.01,0 -0.15489,-0.031 -0.32227,-0.069 -0.66143,-0.149 -1.20614,-0.2002 -1.92152,-0.1809 -0.86772,0.024 -1.54209,0.145 -2.34375,0.422 l -0.30469,0.1053 0.1875,-0.1759 z m -2.67188,0.057 C 5.27252,11.4336 4.7227,11.2931 4.35153,11.2325 c -0.50468,-0.082 -0.85286,-0.1038 -1.4714,-0.09 -0.61458,0.013 -0.98632,0.056 -1.49344,0.1711 -0.1418,0.032 -0.28682,0.065 -0.32227,0.072 l -0.0644,0.014 1.1e-4,-3.6767 1.2e-4,-3.6768 0.27529,-0.08 c 0.1514,-0.044 0.28847,-0.085 0.30458,-0.09 0.0233,-0.01 0.0293,0.589 0.0293,2.9349 0,3.2057 -0.007,3.027 0.12978,3.1169 0.0476,0.031 0.1465,0.045 0.42893,0.062 1.12246,0.064 2.18752,0.4409 3.05702,1.0822 0.1875,0.1383 0.63749,0.5181 0.66328,0.5598 0.018,0.029 0.006,0.026 -0.28292,-0.078 z" />
                         </svg></a>
-                    <a href="">
-                        <p class="kopje" tabindex="13">Lessons</p>
+                    <a href="" tabindex="13">
+                        <p class="kopje">Lessons</p>
                     </a>
                 </li>
 
@@ -92,8 +92,8 @@
                        c0-3.3-3.1-5.5-6.4-5.5h-2c-3.4,0-6.6,2.2-6.6,5.5v111.9C0.05,120.8,3.25,124,6.55,124z" />
                             </g>
                         </svg></a>
-                    <a href="">
-                        <p class="kopje" tabindex="15">Statistics</p>
+                    <a href="" tabindex="15">
+                        <p class="kopje">Statistics</p>
                     </a>
                 </li>
 
@@ -107,8 +107,8 @@
                                 d="M14.5641 13.8369H9.4359C6.46154 13.8369 4 16.2859 4 19.245C4 19.9593 4.30769 20.5716 4.92308 20.8777C5.84615 21.3879 7.89744 22.0001 12 22.0001C16.1026 22.0001 18.1538 21.3879 19.0769 20.8777C19.5897 20.5716 20 19.9593 20 19.245C20 16.1838 17.5385 13.8369 14.5641 13.8369Z"
                                 fill="##434b75" />
                         </svg></a>
-                    <a href="">
-                        <p class="kopje" tabindex="17">Profile</p>
+                    <a href="" tabindex="17">
+                        <p class="kopje">Profile</p>
                     </a>
                 </li>
             </ul>
@@ -132,7 +132,7 @@
 
     </article>
 
-    <article class="privacy-statement">
+    <div class="privacy-statement">
 
         <details tabindex="2">
             <summary>Privacy statement</summary>
@@ -142,12 +142,12 @@
             <button class="change-preferences">Change preferences</button>
         </details>
 
-    </article>
+    </div>
 
 
     <main>
         <h2>6-12 months</h2>
-        <article class="test-1">
+        <div class="test-1">
 
             <section class="do-test-header-1">
                 <h3>Attention span test</h3>
@@ -179,12 +179,12 @@
                 </svg>
             </button>
 
-        </article>
+        </div>
 
 
 
 
-        <article class="test-2">
+        <div class="test-2">
 
             <section class="do-test-header-2">
                 <h3>Word recognition</h3>
@@ -221,14 +221,14 @@
                     </svg>
                 </button>
             </div>
-        </article>
+        </div>
 
 
 
 
 
         <h2>1-2 years</h2>
-        <article class="test-3">
+        <div class="test-3">
 
 
             <section class="do-test-header-3">
@@ -267,13 +267,13 @@
                     </svg>
                 </button>
             </div>
-        </article>
+        </div>
 
 
 
 
 
-        <article class="test-4">
+        <div class="test-4">
 
             <section class="do-test-header-4">
                 <h3>The first words</h3>
@@ -312,7 +312,7 @@
                     </svg>
                 </button>
             </div>
-        </article>
+        </div>
 
 
         <button class="button-menu" aria-label="menu openen" id="menuToggle" tabindex="7">
@@ -328,11 +328,6 @@
 
     <!--EINDE TESTING-->
 
-
-
-
 </body>
-
-
 
 </html>
