div naar article

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <main>
 
-        <div class="vraag-uitleg-werkt">
+        <article>
             <section>
                 <h2>
                     Explanation
@@ -131,7 +131,7 @@
                     proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam
                     en ze door elkaar husselde om een font-catalogus te maken.</p>
             </section>
-        </div>
+        </article>
 
         <button type="button" class="vraagteken" id="vraagToggle" tabindex="1">
             <svg class="hulp-icon" aria-label="vraagteken" height="35px" width="35px" version="1.1"
