grid naar flex testing pagina kopjes

--- a/testing/testing.html
+++ b/testing/testing.html
@@ -152,6 +152,7 @@
             <section class="do-test-header-1">
                 <h3>Attention span test</h3>
 
+                <div class="klok-tijd">
                 <svg class="klok" width="20px" height="20px" viewBox="0 0 24 24" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -159,6 +160,7 @@
                         stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
                 <p class="tijd">10-15 minutes</p>
+            </div>
             </section>
 
             <div class="test-uitleg">
@@ -189,6 +191,7 @@
             <section class="do-test-header-2">
                 <h3>Word recognition</h3>
 
+                <div class="klok-tijd">
                 <svg class="klok" width="20px" height="20px" viewBox="0 0 24 24" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -196,6 +199,7 @@
                         stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
                 <p class="tijd">5-10 minutes</p>
+            </div>
             </section>
 
             <div class="test-uitleg">
@@ -234,6 +238,7 @@
             <section class="do-test-header-3">
                 <h3>The first words</h3>
 
+                <div class="klok-tijd">
                 <svg class="klok" width="20px" height="20px" viewBox="0 0 24 24" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -241,6 +246,7 @@
                         stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
                 <p class="tijd">10-15 minutes</p>
+            </div>
             </section>
 
             <div class="test-uitleg">
@@ -278,6 +284,7 @@
             <section class="do-test-header-4">
                 <h3>The first words</h3>
 
+                <div class="klok-tijd">
                 <svg class="klok" width="20px" height="20px" viewBox="0 0 24 24" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -285,6 +292,7 @@
                         stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
                 <p class="tijd">10-15 minutes</p>
+            </div>
             </section>
 
             <div class="test-uitleg">
